frontend/src/OverlappingHorizontalGraphLines.scss
.overlapping-horizontal-graph-lines {
  padding: 0.5rem 0.5rem 0.5rem 0;
  // position: relative;
  width: 100%;
}

.ohgl-title {
  font-style: italic;
  margin-bottom: 0.25rem;
}

.ohgl-actual-lines {
  display:flex;
  width: 100%;
  height: 25px;
  position: relative;
  align-items: center;
}

.ohgl-initial {
  position: absolute;
  background-color: #E2E2E2;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
  display: flex;
  justify-content: end;
  align-items: center;
  height: 30px;
  z-index: 1;
}

.ohgl-current {
  position: absolute;
  background-color: #E2E2E2;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
  display: flex;
  justify-content: end;
  align-items: center;
  height: 30px;
  z-index: 2;
  transition: 0.3s;
  width: 0%;
}

.ohgl-returns {
  position: absolute;
  background-color: black;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
  display: flex;
  justify-content: end;
  align-items: center;
  height: 30px;
  color: white;
  z-index: 3;
  transition: 0.3s;
  width: 0%;
}

.ohgl-sold {
  position: absolute;
  background-color: #4E5981;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
  color: white;
  display: flex;
  justify-content: end;
  align-items: center;
  height: 30px;
  z-index: 4;
  transition: 0.3s;
  width: 0%;
}

.ohgl-given {
  position: absolute;
  background-color: #57eafa;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
  display: flex;
  justify-content: end;
  align-items: center;
  height: 30px;
  z-index: 5;
  transition: 0.3s;
  width: 0%;
}

.ohgl-lines-and-total {
  display: flex;
}

.ohgl-title-container {
  border-radius: 15px;
  background-color: #E2E2E2;
  padding: 0.1rem 0.5rem 0.1rem 0.5rem;
  height: 30px;
  display: flex;
  align-items: center;
  margin-right: 0.5rem;
  position: relative;
}

.ohgl-title2 {
  color: black;
  white-space: nowrap;
  overflow-x: clip;
  overflow-y: visible;
  text-overflow: ellipsis;
  width: 125px;
}

.ohgl-global {
  display: flex;
  align-items: center;
}

.ohgl-tooltip-title {
  position: absolute;
  top: -30px;
  color: white;
  background-color: #4e6cb3;
  border-radius: 15px;
  z-index: 10;
  white-space: nowrap;
  padding: 0.5rem;
}

.hidden {
  display: none;
}

.ohgl-number {
  display: inline-block;
  width: fit-content;
  max-width: 100%;
  white-space: nowrap;
}

.no-padding {
  padding: 0.25rem 0 0.25rem 0;
}

.ohgl-current-number {
  display: flex;
  align-items: center;
}

.ohgl-returns-number {
  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
  margin-right: 0.5rem;
  background-color: grey;
  border-radius: 15px;
}

.ohgl-returns-number p {
  margin: 0;
  color: white;
}

.incl {
  font-size: 0.75em;
  font-style: italic;
  margin-right: 0.25rem;
}

